# zoro-smart-

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  contracts.yml  deploy-testnet.yml
apps/api/: README.md  eslint.config.js  package.json  vitest.config.ts
apps/api/src/: index.ts  server.test.ts  server.ts
apps/api/src/lib/: cache.ts  db.ts  env.ts  logger.ts  stellar.ts
apps/api/src/routes/: analytics.ts  arrays.ts  bridge.ts  health.ts  notifications.ts  portfolio.ts  stats.ts  stream.ts  yield.ts
apps/api/src/types/: fastify-logger.d.ts
apps/indexer/: README.md  drizzle.config.ts  eslint.config.js  package.json  tsconfig.build.json  tsconfig.json
apps/indexer/src/: config.test.ts  config.ts  index.ts  logger.ts  poller.test.ts  poller.ts  redis-bus.ts
apps/indexer/src/db/: client.ts  schema.ts
apps/indexer/src/handlers/: bridge-wrapper.ts  governance.ts  rwa-token.ts
apps/web/: README.md  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.build.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  main.tsx  router.tsx
apps/web/src/components/: ArrayCard.tsx  BridgeVisualizer.tsx  ConnectButton.tsx  CrossChainMonitor.tsx  Footer.tsx  Header.tsx  Hero.tsx  NetworkPill.tsx  NotificationBell.tsx  RouteFallback.tsx  SearchBar.tsx  Sidebar.tsx  StatCard.tsx  (+2 more)
contracts/: Cargo.toml  README.md  rustfmt.toml
contracts/bridge-wrapper/: Cargo.toml  README.md
contracts/bridge-wrapper/src/: lib.rs  test.rs
contracts/bridge-wrapper/test_snapshots/test/: test_bind_token_then_double_bind_errors.1.json  test_set_validators_rejects_bad_threshold.1.json  test_set_validators_then_get_round_trip.1.json  test_unknown_chain_wrap_errors.1.json
contracts/rwa-token/: Cargo.toml  README.md
contracts/rwa-token/src/: lib.rs  test.rs
contracts/rwa-token/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_double_initialize_errors.1.json  test_initialize_then_metadata.1.json  test_mint_transfer_burn_flow.1.json  test_set_operator_admin_only.1.json  test_unauthorized_mint_rejected.1.json
contracts/solar-registry/: Cargo.toml  README.md
contracts/solar-registry/src/: lib.rs  test.rs
contracts/solar-registry/test_snapshots/test/: test_bind_token_updates_array.1.json  test_initialize_stores_admin_and_verifier.1.json  test_register_duplicate_id_errors.1.json  test_register_then_get_round_trip.1.json  test_status_lifecycle_transitions.1.json  test_unknown_array_errors.1.json
contracts/yield-distributor/: Cargo.toml  README.md
contracts/yield-distributor/src/: lib.rs  test.rs
contracts/yield-distributor/test_snapshots/test/: test_claim_with_no_yield_errors.1.json  test_claimable_matches_balance_math.1.json  test_fund_rejects_zero_amount.1.json  test_initialize_stores_roles.1.json  test_set_funder_admin_only.1.json  test_total_claimed_starts_at_zero.1.json
docker/: Dockerfile.api  Dockerfile.indexer  Dockerfile.web  nginx.conf
docs/issues/: 0001-soroban-simulation-source-account.md  0002-bridge-actual-cross-chain-bridge.md  0003-frontend-real-sse-feed.md  0004-docs-typography-tokens.md  0005-typo-platform-support-links.md
tools/scripts/: README.md  create-issues.sh  deploy-mainnet.ts  deploy-testnet.ts  inspector.ts  package.json  setup-project-board.sh  setup-stellar-env.ts  tsconfig.json
tools/scripts/lib/: logger.ts
(+14 files in other folders)
